nginx-kustomize/base/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-deploy
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
